# Dnscrypt-list-ping-sorting

./: .gitignore  README.md  pyproject.toml
dnscrypt_list_ping_sorting.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dnscrypt_sorter/: cli.py  filters.py  latency.py  source.py  ui.py
tests/: test_cli.py  test_filters.py  test_latency.py
